# webview_linux

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/webview_linux/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: webview_linux.dart  webview_linux_bindings_generated.dart
lib/core/: i_webview.dart  js_handler.dart  page_handler.dart  webview.dart
src/: CMakeLists.txt
src/test/: main.cpp
test/: webview_linux.dart
